examples/test/testpolicy16098.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16098
  namespace: namespace14
spec:
  podSelector:
    matchLabels:
      key40: value27
      key25: value35
      key30: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value48
          key30: value2
          key14: value28
      podSelector:
        matchLabels:
          key36: value8
          key44: value48
